--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-loader": "^2.1.2",
     "gatsby": "^2.1.2",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-google-analytics": "^2.0.14",
+    "gatsby-plugin-guess-js": "^1.0.4",
     "gatsby-plugin-offline": "^2.0.23",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-react-svg": "^2.0.0",
